Deployments/Prometheus and Grafana/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: npm.tvdirect.tv
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prom-stack-grafana
            port:
              number: 80
